Fixed issues on mobile devices

--- a/legendOfZeldaStoryFillInTheBlanks.css
+++ b/legendOfZeldaStoryFillInTheBlanks.css
@@ -6,7 +6,7 @@ body {
     background-color: #2E5CE6;
 }
 #main {
-    height:1250px;
+    height:1550px;
     margin-left:8%;
     margin-right:8%;
     margin-top:-21px;
